Document choices apis then test as well
